chore: code clean up